--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GymBotBro",
+  "name": "gymbotbro",
   "version": "1.0.0",
   "type": "module",
   "main": "bot.js",
@@ -16,10 +16,9 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "googleapis": "^160.0.0",
-    "instagram-scraping": "^1.0.13",
     "newsapi": "^2.4.1",
     "node-cron": "^3.0.3",
-    "openai": "^4.104.0"
-    ,"mongodb": "^5.6.0"
+    "openai": "^4.104.0",
+    "mongodb": "^5.6.0"
   }
 }
